Added Eric and Kumar's Changes
Updated Basic Move, ReadFile, and Moves.txt