@@ -1,88 +1,84 @@
-
 import java.nio.file.Paths;
-
-
 
 import java.nio.file.Files;
 
-
 import java.io.*;
-
 
 public class BasicPokemon {
 
-    private int dex=0;
-    private String name="";
+    private int dex = 0;
+    private String name = "";
     private int baseHealth;
     private int health;
-        private int baseSpecialDefense;
+    private int baseSpecialDefense;
 
     private int baseDefense;
 
     private int baseAttack;
 
-        private int baseSpecialAttack;
+    private int baseSpecialAttack;
 
     private int baseSpeed;
 
-BasicMove[] moves=new BasicMove[4];
+    BasicMove[] moves = new BasicMove[4];
 
-    private String type1="";
-    private String type2="";
+    private String type1 = "";
+    private String type2 = "";
 
-//    private String status;
+    //    private String status;
 //    private boolean hasStatus;
- int attackIncrease;
- int attackDecrease;
- int specialAttackIncrease;
+    int attackIncrease;
+    int attackDecrease;
+    int specialAttackIncrease;
     int specialAttackDecrease;
-int defenseIncrease;
+    int defenseIncrease;
     int defenseDecrease;
-int specialDefenseIncrease;
+    int specialDefenseIncrease;
     int specialDefenseDecrease;
-int speedIncrease;
-int speedDecrease;
+    int speedIncrease;
+    int speedDecrease;
 
-
-public int convertMmonName(String monName)
-{
-    int moveNumber = -1;
-    String copy = "something went wrong; ";
-    try {
-        copy= Files.readString(Paths.get("Stats.txt"));
-    } catch (IOException e) {
-        e.printStackTrace();
-    }
-    String [] splittedCopy;
-    splittedCopy=copy.split("\n");
-    for(int i = 0; i < 719; i++)
-    {
-        String stats=splittedCopy[i];
-        String[] s=stats.split(";");
-        try{if(s[1].equalsIgnoreCase(monName))
-        {
-            moveNumber = Integer.parseInt(s[0]);
-            break;
-        }}
-        catch(Exception e){
-
+    public int convertMmonName(String monName) {
+        int moveNumber = -1;
+        String copy = "something went wrong; ";
+        try {
+//			copy = Files.readString(Paths.get("Stats.txt"));
+            byte[] file = Files.readAllBytes(Paths.get("Stats.txt"));
+            copy = new String(file);
+        } catch (IOException e) {
+            e.printStackTrace();
         }
+        String[] splittedCopy;
+        splittedCopy = copy.split("\n");
+        for (int i = 0; i < 719; i++) {
+            String stats = splittedCopy[i];
+            String[] s = stats.split(";");
+            try {
+                if (s[1].equalsIgnoreCase(monName)) {
+                    moveNumber = Integer.parseInt(s[0]);
+                    break;
+                }
+            } catch (Exception e) {
+
+            }
+        }
+        return moveNumber;
     }
-    return moveNumber;
-}
-    public BasicPokemon(int dexNumber){
-        dex=dexNumber;
-        for(int i =0;i<4;i++){
-            moves[i]=new BasicMove(1);
+
+    public BasicPokemon(int dexNumber) {
+        dex = dexNumber;
+        for (int i = 0; i < 4; i++) {
+            moves[i] = new BasicMove(1);
         }
         setStats(dex);
     }
-    public BasicPokemon(String pokeName){
-    name=pokeName;
-    int dexNumber= convertMmonName(pokeName);
-    dex=dexNumber;
-        for(int i =0;i<4;i++){
-            moves[i]=new BasicMove(1);
+
+    public BasicPokemon(String pokeName) {
+        name = pokeName;
+        int dexNumber = convertMmonName(pokeName);
+        dex = dexNumber;
+        for (int i = 0; i < 4; i++) {
+            moves[i] = new BasicMove(1);
         }
         setStats(dex);
     }
@@ -132,29 +128,30 @@ public int convertMmonName(String monName)
 ////        statsApplied=true;
 //    }
 
-
-    public void setStats(int dexNUmber)  {
+    public void setStats(int dexNUmber) {
 
         String copy = "something went wrong; ";
-            try {
-             copy= Files.readString(Paths.get("Stats.txt"));
+        try {
+//			copy = Files.readString(Paths.get("Stats.txt"));
+            byte[] file = Files.readAllBytes(Paths.get("Stats.txt"));
+            copy = new String(file);
         } catch (IOException e) {
             e.printStackTrace();
         }
-        String [] splittedCopy;
-        splittedCopy=copy.split("\n");
-        String stats=splittedCopy[dexNUmber-1];
-        String[] s=stats.split(";");
-        name=s[1];
-        type1=s[2];
-        type2=s[3];
-        baseHealth=Integer.parseInt(s[4]);
-        health=baseHealth;
-        baseAttack=Integer.parseInt(s[5]);
-        baseDefense=Integer.parseInt(s[6]);
-        baseSpecialAttack=Integer.parseInt(s[7]);
-        baseSpecialDefense=Integer.parseInt(s[8]);
-        baseSpeed=Integer.parseInt(s[9]);
+        String[] splittedCopy;
+        splittedCopy = copy.split("\n");
+        String stats = splittedCopy[dexNUmber - 1];
+        String[] s = stats.split(";");
+        name = s[1];
+        type1 = s[2];
+        type2 = s[3];
+        baseHealth = Integer.parseInt(s[4]);
+        health = baseHealth;
+        baseAttack = Integer.parseInt(s[5]);
+        baseDefense = Integer.parseInt(s[6]);
+        baseSpecialAttack = Integer.parseInt(s[7]);
+        baseSpecialDefense = Integer.parseInt(s[8]);
+        baseSpeed = Integer.parseInt(s[9]);
 //        String content = Files.readString(Paths.get("Stats.txt"));
 //        File f = new File("Stats.txt");
 //        List<String> copy;
@@ -169,12 +166,8 @@ public int convertMmonName(String monName)
 ////            e.printStackTrace();
 ////        }
 //        String copy=reader.toString();
-        
 
     }
-
-
-    
 
     public int getDex() {
         return dex;
@@ -185,175 +178,170 @@ public int convertMmonName(String monName)
     }
 
     public int getSpecialDefense() {
-        if(specialDefenseDecrease==0&&specialDefenseIncrease>0){//no stat decrease, their is a stat increase
-            return baseSpecialDefense*((2+specialDefenseIncrease)/2);
-        }
-        else if(specialDefenseDecrease>0&&specialDefenseIncrease==0){//no stat increase, their is a stat decrease
-            return baseSpecialDefense*(2/(2+specialDefenseDecrease));
-        }
-        else if(specialDefenseIncrease>specialDefenseDecrease&&specialDefenseDecrease!=0){//stat increase and stat decrease, but stat increase is higher.
-            while (specialDefenseDecrease>0){
+        if (specialDefenseDecrease == 0 && specialDefenseIncrease > 0) {// no stat decrease, their is a stat increase
+            return baseSpecialDefense * ((2 + specialDefenseIncrease) / 2);
+        } else if (specialDefenseDecrease > 0 && specialDefenseIncrease == 0) {// no stat increase, their is a stat
+            // decrease
+            return baseSpecialDefense * (2 / (2 + specialDefenseDecrease));
+        } else if (specialDefenseIncrease > specialDefenseDecrease && specialDefenseDecrease != 0) {// stat increase and
+            // stat decrease,
+            // but stat increase
+            // is higher.
+            while (specialDefenseDecrease > 0) {
                 specialDefenseDecrease--;
                 specialDefenseIncrease--;
             }
-            return baseSpecialDefense*((2+specialDefenseIncrease)/2);
-        }
-        else if(specialDefenseDecrease>specialDefenseIncrease&&specialDefenseIncrease!=0){//stat increase and decrease, but stat decrease is higher
-            while (specialDefenseIncrease>0){
+            return baseSpecialDefense * ((2 + specialDefenseIncrease) / 2);
+        } else if (specialDefenseDecrease > specialDefenseIncrease && specialDefenseIncrease != 0) {// stat increase and
+            // decrease, but
+            // stat decrease is
+            // higher
+            while (specialDefenseIncrease > 0) {
                 specialDefenseDecrease--;
                 specialDefenseIncrease--;
             }
-            return  baseSpecialDefense*(2/(2+specialDefenseDecrease));
+            return baseSpecialDefense * (2 / (2 + specialDefenseDecrease));
 
-        }
-        else if(specialDefenseDecrease==0&&specialDefenseIncrease==0){//no stat changes
+        } else if (specialDefenseDecrease == 0 && specialDefenseIncrease == 0) {// no stat changes
             return baseSpecialDefense;
-        }
-        else{//this shouldn't happen
-            while(true){
+        } else {// this shouldn't happen
+            while (true) {
                 System.out.println("what");
             }
         }
     }
 
-    public int getDefense()  {
-        if(defenseDecrease==0&&defenseIncrease>0){//no stat decrease, their is a stat increase
-            return baseDefense*((2+defenseIncrease)/2);
-        }
-        else if(defenseDecrease>0&&defenseIncrease==0){//no stat increase, their is a stat decrease
-            return baseDefense*(2/(2+defenseDecrease));
-        }
-        else if(defenseIncrease>defenseDecrease&&defenseDecrease!=0){//stat increase and stat decrease, but stat increase is higher.
-            while (defenseDecrease>0){
+    public int getDefense() {
+        if (defenseDecrease == 0 && defenseIncrease > 0) {// no stat decrease, their is a stat increase
+            return baseDefense * ((2 + defenseIncrease) / 2);
+        } else if (defenseDecrease > 0 && defenseIncrease == 0) {// no stat increase, their is a stat decrease
+            return baseDefense * (2 / (2 + defenseDecrease));
+        } else if (defenseIncrease > defenseDecrease && defenseDecrease != 0) {// stat increase and stat decrease, but
+            // stat increase is higher.
+            while (defenseDecrease > 0) {
                 defenseDecrease--;
                 defenseIncrease--;
             }
-            return baseDefense*((2+defenseIncrease)/2);
-        }
-        else if(defenseDecrease>defenseIncrease&&defenseIncrease!=0){//stat increase and decrease, but stat decrease is higher
-            while (defenseIncrease>0){
+            return baseDefense * ((2 + defenseIncrease) / 2);
+        } else if (defenseDecrease > defenseIncrease && defenseIncrease != 0) {// stat increase and decrease, but stat
+            // decrease is higher
+            while (defenseIncrease > 0) {
                 defenseDecrease--;
                 defenseIncrease--;
             }
-            return  baseDefense*(2/(2+defenseDecrease));
+            return baseDefense * (2 / (2 + defenseDecrease));
 
-        }
-        else if(defenseDecrease==0&&defenseIncrease==0){//no stat changes
+        } else if (defenseDecrease == 0 && defenseIncrease == 0) {// no stat changes
             return baseDefense;
-        }
-        else{//this shouldn't happen
+        } else {// this shouldn't happen
 
-            while(true){
+            while (true) {
                 System.out.println("what");
             }
         }
     }
 
     public int getAttack() {
-        if(attackDecrease==0&&attackIncrease>0){//no stat decrease, their is a stat increase
-            return baseAttack*((2+attackIncrease)/2);
-        }
-        else if(attackDecrease>0&&attackIncrease==0){//no stat increase, their is a stat decrease
-            return baseAttack*(2/(2+attackDecrease));
-        }
-        else if(attackIncrease>attackDecrease&&attackDecrease!=0){//stat increase and stat decrease, but stat increase is higher.
-            while (attackDecrease>0){
+        if (attackDecrease == 0 && attackIncrease > 0) {// no stat decrease, their is a stat increase
+            return baseAttack * ((2 + attackIncrease) / 2);
+        } else if (attackDecrease > 0 && attackIncrease == 0) {// no stat increase, their is a stat decrease
+            return baseAttack * (2 / (2 + attackDecrease));
+        } else if (attackIncrease > attackDecrease && attackDecrease != 0) {// stat increase and stat decrease, but stat
+            // increase is higher.
+            while (attackDecrease > 0) {
                 attackDecrease--;
                 attackIncrease--;
             }
-            return baseAttack*((2+attackIncrease)/2);
-        }
-        else if(attackDecrease>attackIncrease&&attackIncrease!=0){//stat increase and decrease, but stat decrease is higher
-            while (attackIncrease>0){
+            return baseAttack * ((2 + attackIncrease) / 2);
+        } else if (attackDecrease > attackIncrease && attackIncrease != 0) {// stat increase and decrease, but stat
+            // decrease is higher
+            while (attackIncrease > 0) {
                 attackDecrease--;
                 attackIncrease--;
             }
-            return  baseAttack*(2/(2+attackDecrease));
+            return baseAttack * (2 / (2 + attackDecrease));
 
-        }
-        else if(attackDecrease==0&&attackIncrease==0){//no stat changes
+        } else if (attackDecrease == 0 && attackIncrease == 0) {// no stat changes
             return baseAttack;
-        }
-        else{//this shouldn't happen
-            while(true){
+        } else {// this shouldn't happen
+            while (true) {
                 System.out.println("what");
             }
         }
     }
 
-    public int getSpecialAttack()  {
-        if(specialAttackDecrease==0&&specialAttackIncrease>0){//no stat decrease, their is a stat increase
-            return baseSpecialAttack*((2+specialAttackIncrease)/2);
-        }
-        else if(specialAttackDecrease>0&&specialAttackIncrease==0){//no stat increase, their is a stat decrease
-            return baseSpecialAttack*(2/(2+specialAttackDecrease));
-        }
-        else if(specialAttackIncrease>specialAttackDecrease&&specialAttackDecrease!=0){//stat increase and stat decrease, but stat increase is higher.
-            while (specialAttackDecrease>0){
+    public int getSpecialAttack() {
+        if (specialAttackDecrease == 0 && specialAttackIncrease > 0) {// no stat decrease, their is a stat increase
+            return baseSpecialAttack * ((2 + specialAttackIncrease) / 2);
+        } else if (specialAttackDecrease > 0 && specialAttackIncrease == 0) {// no stat increase, their is a stat
+            // decrease
+            return baseSpecialAttack * (2 / (2 + specialAttackDecrease));
+        } else if (specialAttackIncrease > specialAttackDecrease && specialAttackDecrease != 0) {// stat increase and
+            // stat decrease,
+            // but stat increase
+            // is higher.
+            while (specialAttackDecrease > 0) {
                 specialAttackDecrease--;
                 specialAttackIncrease--;
             }
-            return baseSpecialAttack*((2+specialAttackIncrease)/2);
-        }
-        else if(specialAttackDecrease>specialAttackIncrease&&specialAttackIncrease!=0){//stat increase and decrease, but stat decrease is higher
-            while (specialAttackIncrease>0){
+            return baseSpecialAttack * ((2 + specialAttackIncrease) / 2);
+        } else if (specialAttackDecrease > specialAttackIncrease && specialAttackIncrease != 0) {// stat increase and
+            // decrease, but
+            // stat decrease is
+            // higher
+            while (specialAttackIncrease > 0) {
                 specialAttackDecrease--;
                 specialAttackIncrease--;
             }
-            return  baseSpecialAttack*(2/(2+specialAttackDecrease));
+            return baseSpecialAttack * (2 / (2 + specialAttackDecrease));
 
-        }
-        else if(specialAttackDecrease==0&&specialAttackIncrease==0){//no stat changes
+        } else if (specialAttackDecrease == 0 && specialAttackIncrease == 0) {// no stat changes
             return baseSpecialAttack;
-        }
-        else{//this shouldn't happen
-          while(true){
-              System.out.println("what");
-          }
+        } else {// this shouldn't happen
+            while (true) {
+                System.out.println("what");
+            }
         }
     }
-    public int getSpeed()  {
-        if(speedDecrease==0&&speedIncrease>0){//no stat decrease, their is a stat increase
-            return baseSpeed*((2+speedIncrease)/2);
-        }
-        else if(speedDecrease>0&&speedIncrease==0){//no stat increase, their is a stat decrease
-            return baseSpeed*(2/(2+speedDecrease));
-        }
-        else if(speedIncrease>speedDecrease&&speedDecrease!=0){//stat increase and stat decrease, but stat increase is higher.
-            while (speedDecrease>0){
-                speedDecrease--;
-                speedIncrease--;
-            }
-            return baseSpeed*((2+speedIncrease)/2);
-        }
-        else if(speedDecrease>speedIncrease&&speedIncrease!=0){//stat increase and decrease, but stat decrease is higher
-            while (speedIncrease>0){
-                speedDecrease--;
-                speedIncrease--;
-            }
-            return  baseSpeed*(2/(2+speedDecrease));
 
-        }
-        else if(speedDecrease==0&&speedIncrease==0){//no stat changes
+    public int getSpeed() {
+        if (speedDecrease == 0 && speedIncrease > 0) {// no stat decrease, their is a stat increase
+            return baseSpeed * ((2 + speedIncrease) / 2);
+        } else if (speedDecrease > 0 && speedIncrease == 0) {// no stat increase, their is a stat decrease
+            return baseSpeed * (2 / (2 + speedDecrease));
+        } else if (speedIncrease > speedDecrease && speedDecrease != 0) {// stat increase and stat decrease, but stat
+            // increase is higher.
+            while (speedDecrease > 0) {
+                speedDecrease--;
+                speedIncrease--;
+            }
+            return baseSpeed * ((2 + speedIncrease) / 2);
+        } else if (speedDecrease > speedIncrease && speedIncrease != 0) {// stat increase and decrease, but stat
+            // decrease is higher
+            while (speedIncrease > 0) {
+                speedDecrease--;
+                speedIncrease--;
+            }
+            return baseSpeed * (2 / (2 + speedDecrease));
+
+        } else if (speedDecrease == 0 && speedIncrease == 0) {// no stat changes
             return baseSpeed;
+        } else {// this shouldn't happen
+            while (true) {
+                System.out.println("what");
+            }
         }
-        else{//this shouldn't happen
-           while(true){
-               System.out.println("what");
-           }
-        }
-    }
-public void setMoves(int[] givenMoves)
-{
-    for(int i=0;i<moves.length;i++){
-        moves[i]=new BasicMove(givenMoves[i]);
-    }
-}
-    public void setMoves(BasicMove[] givenMoves)
-    {
-        moves=givenMoves;
     }
 
+    public void setMoves(int[] givenMoves) {
+        for (int i = 0; i < moves.length; i++) {
+            moves[i] = new BasicMove(givenMoves[i]);
+        }
+    }
+
+    public void setMoves(BasicMove[] givenMoves) {
+        moves = givenMoves;
+    }
 
     public BasicMove[] getMoves() {
         return moves;
@@ -366,59 +354,69 @@ public void setMoves(int[] givenMoves)
     public String getType1() {
         return type1;
     }
+
     public String getType2() {
         return type2;
     }
+
     public void takeDamage(int damage) {
 
-        health-=damage;
+        health -= damage;
     }
+
     public void setAttackIncrease(int stages) {
-           attackIncrease += stages;
+        attackIncrease += stages;
 
     }
+
     public void setSpecialAttackIncrease(int stages) {
-        specialAttackIncrease+=stages;
+        specialAttackIncrease += stages;
 
     }
+
     public void setDefenseIncrease(int stages) {
 
         defenseIncrease += stages;
 
-
     }
+
     public void setSpecialDefenseIncrease(int stages) {
-        specialDefenseIncrease+=stages;
+        specialDefenseIncrease += stages;
 
     }
+
     public void setSpeedIncrease(int stages) {
 
-            speedIncrease += stages;
+        speedIncrease += stages;
 
-        }
-        public void setAttackDecrease(int stages) {
-                attackDecrease += stages;
+    }
 
-        }
-        public void setSpecialAttackDecrease(int stages) {
-            specialAttackDecrease+=stages;
+    public void setAttackDecrease(int stages) {
+        attackDecrease += stages;
 
-        }
-        public void setDefenseDecrease(int stages) {
-                defenseDecrease += stages;
+    }
 
+    public void setSpecialAttackDecrease(int stages) {
+        specialAttackDecrease += stages;
 
-        }
-        public void setSpecialDefenseDecrease(int stages) {
-            specialDefenseDecrease+=stages;
+    }
 
-        }
-        public void setSpeedDecrease(int stages) {
+    public void setDefenseDecrease(int stages) {
+        defenseDecrease += stages;
 
-                speedDecrease += stages;
+    }
 
-            }
-    //    public String getStatus() {
+    public void setSpecialDefenseDecrease(int stages) {
+        specialDefenseDecrease += stages;
+
+    }
+
+    public void setSpeedDecrease(int stages) {
+
+        speedDecrease += stages;
+
+    }
+    // public String getStatus() {
 //        return status;
 //    }
 
@@ -478,11 +476,7 @@ public void setMoves(int[] givenMoves)
 //    speedModifier=speedModifierParam;
 //    statsApplied=true;
 
-
-
-
-
-    //    int dexParam,
+    // int dexParam,
 //    String nameParam,
 //    int healthParam,
 //    int specialDefenseParam,
@@ -518,39 +512,23 @@ public void setMoves(int[] givenMoves)
 //                   );
 //    }
 //
-    public String toString(){
-        String answer=
-                null
+    public String toString() {
+        String answer = null
 //                "Status: "+status
 //                +"\n"+
 
                 ;
         try {
-            answer = "\nDexNumber: "+dex
-            +"\n"+
-            "Name: "+name
-            +"\n"+
-            "Health: "+health
-            +"\n"+
+            answer = "\nDexNumber: " + dex + "\n" + "Name: " + name + "\n" + "Health: " + health + "\n" +
 
-            "Defense: "+getDefense()
-            +"\n"+
-            "Attack: "+getAttack()
-            +"\n"+
-                "Special Attack: "+getSpecialAttack()
-                +"\n"+
-                "Special Defense: "+getSpecialDefense()
-                +"\n"+
-            "Speed: "+getSpeed()
-            +"\n"+
-                "Modifiers: "+(attackIncrease-attackDecrease)+" attack, "+(defenseIncrease-defenseDecrease)+" defense, "+
-                    (specialAttackIncrease-specialAttackDecrease)+
-                " special attack, "+
-                (specialDefenseIncrease-specialDefenseDecrease)+
-                " special defense modifier, "+(speedIncrease-speedDecrease)+" speed modifier"
-                +"\n"+
-            "Types: "+type1 +" and "+type2
-            +"\n";
+                    "Defense: " + getDefense() + "\n" + "Attack: " + getAttack() + "\n" + "Special Attack: "
+                    + getSpecialAttack() + "\n" + "Special Defense: " + getSpecialDefense() + "\n" + "Speed: "
+                    + getSpeed() + "\n" + "Modifiers: " + (attackIncrease - attackDecrease) + " attack, "
+                    + (defenseIncrease - defenseDecrease) + " defense, "
+                    + (specialAttackIncrease - specialAttackDecrease) + " special attack, "
+                    + (specialDefenseIncrease - specialDefenseDecrease) + " special defense modifier, "
+                    + (speedIncrease - speedDecrease) + " speed modifier" + "\n" + "Types: " + type1 + " and " + type2
+                    + "\n";
         } catch (Exception e) {
             e.printStackTrace();
         }
